# P4

./: Optimización.xlsx  README.md  prueba.gmm  prueba.verif
grafics/: lp.txt  lpc_grafic.m  lpcc.txt  mfcc.txt  provant.py
scripts/: comparador.cpp  meson.build  optim_mfcc.sh  optim_train.sh  plot_gmm_feat.py  plot_gmm_feat2.py  plot_gmm_feat_doble.py  run_spkid.sh  wav2lp.sh  wav2lpcc.sh  wav2mfcc.sh
src/gmm/: gmm_classify.cpp  gmm_train.cpp  gmm_verify.cpp
src/include/: gmm.h
src/pav/: gmm.cpp
